@startuml

title __MCO2's Class Diagram__\n

  namespace  {
    class AreaOne {
    }
  }
  

  namespace  {
    class AreaOne {
    }
  }
  

  namespace  {
    class AreaThree {
    }
  }
  

  namespace  {
    class AreaThree {
    }
  }
  

  namespace  {
    class AreaTwo {
    }
  }
  

  namespace  {
    class AreaTwo {
    }
  }
  

  namespace  {
    class AreasPage {
    }
  }
  

  namespace  {
    class AreasPage {
    }
  }
  

  namespace  {
    class BattlePhase {
    }
  }
  

  namespace  {
    class BattlePhase {
    }
  }
  

  namespace  {
    class Creatures {
    }
  }
  

  namespace  {
    class Creatures {
    }
  }
  

  namespace  {
    class EvolutionPage {
    }
  }
  

  namespace  {
    class EvolutionPage {
    }
  }
  

  namespace  {
    class InventoryPage {
    }
  }
  

  namespace  {
    class InventoryPage {
    }
  }
  

  namespace  {
    class MainApplication {
    }
  }
  

  namespace  {
    class MainApplication {
    }
  }
  

  namespace  {
    class MainMenu {
    }
  }
  

  namespace  {
    class MainMenu {
    }
  }
  

  AreaOne -up-|> javax.swing.JFrame
  AreaOne -up-|> javax.swing.JFrame
  AreaThree -up-|> javax.swing.JFrame
  AreaThree -up-|> javax.swing.JFrame
  AreaTwo -up-|> javax.swing.JFrame
  AreaTwo -up-|> javax.swing.JFrame
  AreasPage -up-|> javax.swing.JFrame
  AreasPage -up-|> javax.swing.JFrame
  BattlePhase -up-|> javax.swing.JFrame
  BattlePhase o-- Creatures : enemy
  BattlePhase -up-|> javax.swing.JFrame
  BattlePhase o-- Creatures : enemy
  EvolutionPage -up-|> javax.swing.JFrame
  EvolutionPage o-- Creatures : creature1
  EvolutionPage o-- Creatures : creature2
  EvolutionPage -up-|> javax.swing.JFrame
  EvolutionPage o-- Creatures : creature1
  EvolutionPage o-- Creatures : creature2
  InventoryPage -up-|> javax.swing.JFrame
  InventoryPage -up-|> javax.swing.JFrame
  MainMenu -up-|> javax.swing.JFrame
  MainMenu -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
